# backend/stock-browser/src/main/java/com/bhs/sb/bs/api/StockApi.java
@@ -1,0 +1,36 @@
+/**
+ * NOTE: This class is auto generated by the swagger code generator program (2.4.1).
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+package com.bhs.sb.bs.api;
+
+import com.bhs.sb.bs.model.Stock;
+import io.swagger.annotations.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.util.List;
+@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2021-07-20T14:46:48.822+05:30")
+
+@Api(value = "stock", description = "the stock API")
+public interface StockApi {
+
+    @ApiOperation(value = "Get all stocks", nickname = "getAllStocks", notes = "Get all stocks", response = Stock.class, responseContainer = "List", tags={  })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "OK", response = Stock.class, responseContainer = "List") })
+    @RequestMapping(value = "/stock",
+        method = RequestMethod.GET)
+    ResponseEntity<List<Stock>> getAllStocks();
+
+}
